Publish full Home page

--- a/index.html
+++ b/index.html
@@ -64,9 +64,29 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<section id="test" class="level1">
-<h1>Test</h1>
-<p>Hello world — if you can see this, index rendering works.</p>
+<section id="zihan-zoe-tang" class="level1">
+<h1>Zihan (Zoe) Tang</h1>
+<p><em>PhD Student in Accounting, University of Minnesota — Carlson School of Management</em></p>
+<p>Primarily, my research examines how <strong>new accounting standards and regulations</strong> shape <strong>firms’</strong> and <strong>investors’</strong> decisions. More broadly, I study <strong>financial institutions, risk management, and corporate governance</strong>. I am also enthusiastic about applying <strong>new technologies—such as large language models (LLMs) and AI—to accounting research</strong>.</p>
+<ul>
+<li><strong>Email:</strong> tang0832@umn.edu<br>
+</li>
+<li><strong>GitHub:</strong> <a href="https://github.com/ZoeTang12" class="uri">https://github.com/ZoeTang12</a><br>
+</li>
+<li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/zihan-tang-972ba1220/" class="uri">https://www.linkedin.com/in/zihan-tang-972ba1220/</a><br>
+</li>
+<li><strong>CV (PDF):</strong> &lt;CV_Zihan_Tang.pdf&gt;</li>
+</ul>
+<section id="selected-projects" class="level2">
+<h2 class="anchored" data-anchor-id="selected-projects">Selected Projects</h2>
+<ul>
+<li><p><strong>Who Enforces Matters: Evidence from Insider-Trading Cases</strong> — Micro-level <em>case × team × defendant</em> database (2011–2024) linking enforcement-team composition to civil/criminal outcomes; preliminary results and robustness in progress.</p></li>
+<li><p><strong>Sentiment Analysis on Inflation after COVID-19</strong> — Published in <em>Applied Economics and Finance</em> (2023).</p></li>
+</ul>
+<blockquote class="blockquote">
+<p>This site is built with <a href="https://quarto.org/">Quarto</a> and hosted via <a href="https://pages.github.com/">GitHub Pages</a>.</p>
+</blockquote>
+</section>
 </section>
 
 </main>
