polish:headshot and theme

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@ ul.task-list li input[type="checkbox"] {
 <link href="site_libs/quarto-html/quarto-syntax-highlighting-7b89279ff1a6dce999919e0e67d4d9ec.css" rel="stylesheet" class="quarto-color-scheme-extra" id="quarto-text-highlighting-styles">
 <script src="site_libs/bootstrap/bootstrap.min.js"></script>
 <link href="site_libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="site_libs/bootstrap/bootstrap-a8976c3e89df70b272bdfba3d2fda974.min.css" rel="stylesheet" append-hash="true" class="quarto-color-scheme" id="quarto-bootstrap" data-mode="light">
+<link href="site_libs/bootstrap/bootstrap-a05ca14c6ba0ac7d3fac67c3d562502a.min.css" rel="stylesheet" append-hash="true" class="quarto-color-scheme" id="quarto-bootstrap" data-mode="light">
 <link href="site_libs/bootstrap/bootstrap-dark-81fe5dcfeb64615fe1e55f802320c342.min.css" rel="stylesheet" append-hash="true" class="quarto-color-scheme quarto-color-alternate" id="quarto-bootstrap" data-mode="dark">
-<link href="site_libs/bootstrap/bootstrap-a8976c3e89df70b272bdfba3d2fda974.min.css" rel="stylesheet" append-hash="true" class="quarto-color-scheme-extra" id="quarto-bootstrap" data-mode="light">
+<link href="site_libs/bootstrap/bootstrap-a05ca14c6ba0ac7d3fac67c3d562502a.min.css" rel="stylesheet" append-hash="true" class="quarto-color-scheme-extra" id="quarto-bootstrap" data-mode="light">
 <script id="quarto-search-options" type="application/json">{
   "location": "navbar",
   "copy-button": false,
@@ -247,8 +247,6 @@ ul.task-list li input[type="checkbox"] {
       <div class="navbar-container container-fluid">
       <div class="navbar-brand-container mx-auto">
     <a href="./index.html" class="navbar-brand navbar-brand-logo">
-    <img src="./headshot.jpg" alt="" class="navbar-logo light-content">
-    <img src="./headshot.jpg" alt="" class="navbar-logo dark-content">
     </a>
     <a class="navbar-brand" href="./index.html">
     <span class="navbar-title">Zihan (Zoe) Tang</span>
@@ -293,10 +291,7 @@ ul.task-list li input[type="checkbox"] {
     <h2 id="toc-title">On this page</h2>
    
   <ul>
-  <li><a href="#zihan-zoe-tang" id="toc-zihan-zoe-tang" class="nav-link active" data-scroll-target="#zihan-zoe-tang">Zihan (Zoe) Tang</a>
-  <ul class="collapse">
-  <li><a href="#selected-projects" id="toc-selected-projects" class="nav-link" data-scroll-target="#selected-projects">Selected Projects</a></li>
-  </ul></li>
+  <li><a href="#selected-projects" id="toc-selected-projects" class="nav-link active" data-scroll-target="#selected-projects">Selected Projects</a></li>
   </ul>
 </nav>
     </div>
@@ -323,18 +318,20 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<section id="zihan-zoe-tang" class="level1">
-<h1>Zihan (Zoe) Tang</h1>
-<p><em>PhD Student in Accounting, University of Minnesota — Carlson School of Management</em></p>
+<div style="display:flex; align-items:center; gap:18px; margin:10px 0 6px 0;">
+<img src="headshot.jpg" alt="Zoe Tang" style="width:96px;height:96px; border-radius:50%; object-fit:cover; box-shadow:0 4px 14px rgba(0,0,0,.12);">
+<div>
+<pre><code>&lt;h1 style="margin:0;"&gt;Zihan (Zoe) Tang&lt;/h1&gt;
+&lt;em&gt;PhD Student in Accounting, University of Minnesota — Carlson School of Management&lt;/em&gt;</code></pre>
+</div>
+</div>
 <p>I study how new accounting rules shape real decisions, with broader interests in financial institutions, risk management, and governance—and I apply LLMs/AI where they add leverage.</p>
 <ul>
 <li><strong>Email:</strong> tang0832@umn.edu<br>
 </li>
 <li><strong>GitHub:</strong> <a href="https://github.com/ZoeTang12" class="uri">https://github.com/ZoeTang12</a><br>
 </li>
-<li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/zihan-tang-972ba1220/" class="uri">https://www.linkedin.com/in/zihan-tang-972ba1220/</a><br>
-</li>
-<li><strong>CV (PDF):</strong> &lt;CV_Zihan_Tang.pdf&gt;</li>
+<li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/zihan-tang-972ba1220/" class="uri">https://www.linkedin.com/in/zihan-tang-972ba1220/</a></li>
 </ul>
 <section id="selected-projects" class="level2">
 <h2 class="anchored" data-anchor-id="selected-projects">Selected Projects</h2>
@@ -347,7 +344,6 @@ ul.task-list li input[type="checkbox"] {
 </blockquote>
 
 
-</section>
 </section>
 
 </main> <!-- /main -->
