Adding Education background and polish the headshot bar

--- a/index.html
+++ b/index.html
@@ -291,7 +291,8 @@ ul.task-list li input[type="checkbox"] {
     <h2 id="toc-title">On this page</h2>
    
   <ul>
-  <li><a href="#selected-projects" id="toc-selected-projects" class="nav-link active" data-scroll-target="#selected-projects">Selected Projects</a></li>
+  <li><a href="#education" id="toc-education" class="nav-link active" data-scroll-target="#education">Education</a></li>
+  <li><a href="#selected-projects" id="toc-selected-projects" class="nav-link" data-scroll-target="#selected-projects">Selected Projects</a></li>
   </ul>
 </nav>
     </div>
@@ -318,12 +319,9 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<div style="display:flex; align-items:center; gap:18px; margin:10px 0 6px 0;">
-<img src="headshot.jpg" alt="Zoe Tang" style="width:96px;height:96px; border-radius:50%; object-fit:cover; box-shadow:0 4px 14px rgba(0,0,0,.12);">
-<div>
-<pre><code>&lt;h1 style="margin:0;"&gt;Zihan (Zoe) Tang&lt;/h1&gt;
-&lt;em&gt;PhD Student in Accounting, University of Minnesota — Carlson School of Management&lt;/em&gt;</code></pre>
-</div>
+<div class="hero" data-markdown="1" style="display:flex; align-items:center; gap:18px; margin:10px 0 6px 0;">
+<p><img src="headshot.jpg" alt="Zoe Tang" style="width:96px;height:96px; border-radius:50%; object-fit:cover; box-shadow:0 4px 14px rgba(0,0,0,.12);"></p>
+<p>### Zihan (Zoe) Tang <em>PhD Student in Accounting, University of Minnesota — Carlson School of Management</em></p>
 </div>
 <p>I study how new accounting rules shape real decisions, with broader interests in financial institutions, risk management, and governance—and I apply LLMs/AI where they add leverage.</p>
 <ul>
@@ -333,6 +331,17 @@ ul.task-list li input[type="checkbox"] {
 </li>
 <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/zihan-tang-972ba1220/" class="uri">https://www.linkedin.com/in/zihan-tang-972ba1220/</a></li>
 </ul>
+<section id="education" class="level2">
+<h2 class="anchored" data-anchor-id="education">Education</h2>
+<ul>
+<li><p><strong>Ph.D.&nbsp;in Accounting</strong>, University of Minnesota – Carlson School of Management<br>
+<em>Jan 2024 – Present</em></p></li>
+<li><p><strong>Master in Financial Engineering</strong>, École Polytechnique Fédérale de Lausanne (EPFL)<br>
+<em>Sep 2021 – Aug 2023</em></p></li>
+<li><p><strong>Honors Bachelor of Mathematics</strong>, University of Waterloo<br>
+<em>Sep 2018 – Aug 2021</em> · Major: <strong>Mathematical Finance &amp; Statistics</strong></p></li>
+</ul>
+</section>
 <section id="selected-projects" class="level2">
 <h2 class="anchored" data-anchor-id="selected-projects">Selected Projects</h2>
 <ul>
