--- a/index.html
+++ b/index.html
@@ -319,9 +319,12 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<div class="hero" data-markdown="1" style="display:flex; align-items:center; gap:18px; margin:10px 0 6px 0;">
-<p><img src="headshot.jpg" alt="Zoe Tang" style="width:96px;height:96px; border-radius:50%; object-fit:cover; box-shadow:0 4px 14px rgba(0,0,0,.12);"></p>
-<p>### Zihan (Zoe) Tang <em>PhD Student in Accounting, University of Minnesota — Carlson School of Management</em></p>
+<div class="hero" style="display:flex; align-items:center; gap:18px; margin:10px 0 6px 0;">
+<img src="headshot.jpg" alt="Zoe Tang" style="width:96px;height:96px; border-radius:50%; object-fit:cover; box-shadow:0 4px 14px rgba(0,0,0,.12);">
+<div>
+<pre><code>&lt;h3 style="margin:0;"&gt;Zihan (Zoe) Tang&lt;/h3&gt;
+&lt;p&gt;&lt;em&gt;PhD Student in Accounting, University of Minnesota — Carlson School of Management&lt;/em&gt;&lt;/p&gt;</code></pre>
+</div>
 </div>
 <p>I study how new accounting rules shape real decisions, with broader interests in financial institutions, risk management, and governance—and I apply LLMs/AI where they add leverage.</p>
 <ul>
