polish the personal webpage

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Home – Zihan (Zoe) Tang</title>
+<title>Home - Zihan Tang – Zihan (Zoe) Tang</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -292,7 +292,6 @@ ul.task-list li input[type="checkbox"] {
    
   <ul>
   <li><a href="#education" id="toc-education" class="nav-link active" data-scroll-target="#education">Education</a></li>
-  <li><a href="#selected-projects" id="toc-selected-projects" class="nav-link" data-scroll-target="#selected-projects">Selected Projects</a></li>
   </ul>
 </nav>
     </div>
@@ -302,7 +301,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Home</h1>
+<h1 class="title">Home - Zihan Tang</h1>
 </div>
 
 
@@ -322,8 +321,7 @@ ul.task-list li input[type="checkbox"] {
 <div class="hero" data-markdown="1" style="display:flex; align-items:center; gap:18px; margin:10px 0 6px 0;">
 <img src="headshot.jpg" alt="Zoe Tang" style="width:96px;height:96px; border-radius:50%; object-fit:cover; box-shadow:0 4px 14px rgba(0,0,0,.12);">
 </div>
-<p><em>Zihan (Zoe) Tang</em> <em>PhD Student in Accounting, University of Minnesota — Carlson School of Management</em></p>
-<p>I study how new accounting rules shape real decisions, with broader interests in financial institutions, risk management, and governance—and I apply LLMs/AI where they add leverage.</p>
+<p>I am a second year PhD Student in Accounting, University of Minnesota — Carlson School of Management. I study how new accounting rules shape real decisions, with broader interests in financial institutions, risk management, and governance—and I apply LLMs/AI where they add leverage.</p>
 <ul>
 <li><strong>Email:</strong> tang0832@umn.edu<br>
 </li>
@@ -340,13 +338,6 @@ ul.task-list li input[type="checkbox"] {
 <em>Sep 2021 – Aug 2023</em></p></li>
 <li><p><strong>Honors Bachelor of Mathematics</strong>, University of Waterloo<br>
 <em>Sep 2018 – Aug 2021</em> · Major: <strong>Mathematical Finance &amp; Statistics</strong></p></li>
-</ul>
-</section>
-<section id="selected-projects" class="level2">
-<h2 class="anchored" data-anchor-id="selected-projects">Selected Projects</h2>
-<ul>
-<li><p><strong>Who Enforces Matters: Evidence from Insider-Trading Cases</strong> — Micro-level <em>case × team × defendant</em> database (2011–2024) linking enforcement-team composition to civil/criminal outcomes; preliminary results and robustness in progress.</p></li>
-<li><p><strong>Sentiment Analysis on Inflation after COVID-19</strong> — Published in <em>Applied Economics and Finance</em> (2023).</p></li>
 </ul>
 <blockquote class="blockquote">
 <p>This site is built with <a href="https://quarto.org/">Quarto</a> and hosted via <a href="https://pages.github.com/">GitHub Pages</a>.</p>
