--- a/research.html
+++ b/research.html
@@ -291,7 +291,7 @@ ul.task-list li input[type="checkbox"] {
     <h2 id="toc-title">On this page</h2>
    
   <ul>
-  <li><a href="#research" id="toc-research" class="nav-link active" data-scroll-target="#research">Research</a>
+  <li><a href="#research-interest" id="toc-research-interest" class="nav-link active" data-scroll-target="#research-interest">Research Interest</a>
   <ul class="collapse">
   <li><a href="#working-paper" id="toc-working-paper" class="nav-link" data-scroll-target="#working-paper">Working Paper</a></li>
   <li><a href="#publication" id="toc-publication" class="nav-link" data-scroll-target="#publication">Publication</a></li>
@@ -323,8 +323,8 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<section id="research" class="level1">
-<h1>Research</h1>
+<section id="research-interest" class="level1">
+<h1>Research Interest</h1>
 <p>Primarily, my research examines how new accounting standards and regulations** shape firms’ and investors’ decisions. More broadly, I study financial institutions, risk management, and corporate governance**. I am also enthusiastic about applying new technologies—such as large language models (LLMs) and AI—to accounting research.</p>
 <section id="working-paper" class="level2">
 <h2 class="anchored" data-anchor-id="working-paper">Working Paper</h2>
