--- a/research.html
+++ b/research.html
@@ -291,12 +291,10 @@ ul.task-list li input[type="checkbox"] {
     <h2 id="toc-title">On this page</h2>
    
   <ul>
-  <li><a href="#research-interest" id="toc-research-interest" class="nav-link active" data-scroll-target="#research-interest">Research Interest</a>
-  <ul class="collapse">
+  <li><a href="#research-interest" id="toc-research-interest" class="nav-link active" data-scroll-target="#research-interest">Research Interest</a></li>
   <li><a href="#working-paper" id="toc-working-paper" class="nav-link" data-scroll-target="#working-paper">Working Paper</a></li>
   <li><a href="#publication" id="toc-publication" class="nav-link" data-scroll-target="#publication">Publication</a></li>
   <li><a href="#data-code" id="toc-data-code" class="nav-link" data-scroll-target="#data-code">Data &amp; Code</a></li>
-  </ul></li>
   </ul>
 </nav>
     </div>
@@ -323,9 +321,10 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<section id="research-interest" class="level1">
-<h1>Research Interest</h1>
-<p>Primarily, my research examines how new accounting standards and regulations** shape firms’ and investors’ decisions. More broadly, I study financial institutions, risk management, and corporate governance**. I am also enthusiastic about applying new technologies—such as large language models (LLMs) and AI—to accounting research.</p>
+<section id="research-interest" class="level2">
+<h2 class="anchored" data-anchor-id="research-interest">Research Interest</h2>
+<p>Primarily, my research examines how new accounting standards and regulations shape firms’ and investors’ decisions. More broadly, I study <strong>financial institutions, risk management, and corporate governance</strong>. I am also enthusiastic about applying new technologies—such as large language models (LLMs) and AI—to accounting research.</p>
+</section>
 <section id="working-paper" class="level2">
 <h2 class="anchored" data-anchor-id="working-paper">Working Paper</h2>
 <p><strong>Who Enforces Matters: Evidence from Insider-Trading Cases</strong><br>
@@ -345,7 +344,6 @@ We assemble a micro-level <strong>case × team × defendant</strong> dataset (20
 </ul>
 
 
-</section>
 </section>
 
 </main> <!-- /main -->
