--- a/research.html
+++ b/research.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Research – Zihan (Zoe) Tang</title>
+<title>Research – Zihan Tang</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -249,7 +249,7 @@ ul.task-list li input[type="checkbox"] {
     <a href="./index.html" class="navbar-brand navbar-brand-logo">
     </a>
     <a class="navbar-brand" href="./index.html">
-    <span class="navbar-title">Zihan (Zoe) Tang</span>
+    <span class="navbar-title">Zihan Tang</span>
     </a>
   </div>
             <div id="quarto-search" class="" title="Search"></div>
@@ -328,7 +328,7 @@ ul.task-list li input[type="checkbox"] {
 <section id="working-paper" class="level2">
 <h2 class="anchored" data-anchor-id="working-paper">Working Paper</h2>
 <p><strong>Who Enforces Matters: Evidence from Insider-Trading Cases</strong><br>
-<em>Zihan (Zoe) Tang</em><br>
+<em>Zihan Tang</em><br>
 We assemble a micro-level <strong>case × team × defendant</strong> dataset (2011–2024) from SEC Litigation Releases and linked biographical sources to study how frontline enforcement-team composition relates to nine defendant-level outcomes (civil and criminal). Using Elastic-Net screening with post-selection OLS and two-way clustering, preliminary patterns suggest professionally balanced teams (investigation, accounting/forensics, data, trial) are associated with stronger criminal channels (parallel actions, incarceration) and larger monetary relief, controlling for venue and scale of illegal gains.<br>
 <em>Status:</em> preliminary; robustness and alternative specifications ongoing.</p>
 </section>
