--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@ ul.task-list li input[type="checkbox"] {
 <div class="hero" data-markdown="1" style="display:flex; align-items:center; gap:18px; margin:10px 0 6px 0;">
 <img src="headshot.jpg" alt="Zoe Tang" style="width:96px;height:96px; border-radius:50%; object-fit:cover; box-shadow:0 4px 14px rgba(0,0,0,.12);">
 </div>
-<p>I am a second year PhD Student in Accounting, University of Minnesota — Carlson School of Management. I study how new accounting rules shape real decisions, with broader interests in financial institutions, risk management, and governance—and I apply LLMs/AI where they add leverage.</p>
+<p>I am a second year PhD Student in Accounting, University of Minnesota — Carlson School of Management. I study how new accounting rules shape real decisions, with broader interests in financial institutions, risk management, and governance.</p>
 <ul>
 <li><strong>Email:</strong> tang0832@umn.edu<br>
 </li>
