Change Home page title

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Home - Zihan Tang – Zihan Tang</title>
+<title>Hello, I’m Zihan Tang – Zihan Tang</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -301,7 +301,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Home - Zihan Tang</h1>
+<h1 class="title">Hello, I’m Zihan Tang</h1>
 </div>
 
 
@@ -321,13 +321,14 @@ ul.task-list li input[type="checkbox"] {
 <div class="hero" data-markdown="1" style="display:flex; align-items:center; gap:18px; margin:10px 0 6px 0;">
 <img src="headshot.jpg" alt="Zoe Tang" style="width:96px;height:96px; border-radius:50%; object-fit:cover; box-shadow:0 4px 14px rgba(0,0,0,.12);">
 </div>
-<p>I am a second year PhD Student in Accounting, University of Minnesota — Carlson School of Management. I study how new accounting rules shape real decisions, with broader interests in financial institutions, risk management, and governance.</p>
 <ul>
-<li><strong>Email:</strong> tang0832@umn.edu<br>
-</li>
-<li><strong>GitHub:</strong> <a href="https://github.com/ZoeTang12" class="uri">https://github.com/ZoeTang12</a><br>
-</li>
-<li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/zihan-tang-972ba1220/" class="uri">https://www.linkedin.com/in/zihan-tang-972ba1220/</a></li>
+<li><p>I am a second year PhD Student in Accounting at University of Minnesota Carlson School of Management.</p></li>
+<li><p>I study how new accounting rules shape real decisions, with broader interests in financial institutions, risk management, and governance.</p></li>
+<li><p><strong>Email:</strong> tang0832@umn.edu<br>
+</p></li>
+<li><p><strong>GitHub:</strong> <a href="https://github.com/ZoeTang12" class="uri">https://github.com/ZoeTang12</a><br>
+</p></li>
+<li><p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/zihan-tang-972ba1220/" class="uri">https://www.linkedin.com/in/zihan-tang-972ba1220/</a></p></li>
 </ul>
 <section id="education" class="level2">
 <h2 class="anchored" data-anchor-id="education">Education</h2>
