--- a/index.html
+++ b/index.html
@@ -322,13 +322,8 @@ ul.task-list li input[type="checkbox"] {
 <img src="headshot.jpg" alt="Zoe Tang" style="width:96px;height:96px; border-radius:50%; object-fit:cover; box-shadow:0 4px 14px rgba(0,0,0,.12);">
 </div>
 <ul>
-<li><p>I am a second year PhD Student in Accounting at University of Minnesota Carlson School of Management.</p></li>
-<li><p>I study how new accounting rules shape real decisions, with broader interests in financial institutions, risk management, and governance.</p></li>
-<li><p><strong>Email:</strong> tang0832@umn.edu<br>
-</p></li>
-<li><p><strong>GitHub:</strong> <a href="https://github.com/ZoeTang12" class="uri">https://github.com/ZoeTang12</a><br>
-</p></li>
-<li><p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/zihan-tang-972ba1220/" class="uri">https://www.linkedin.com/in/zihan-tang-972ba1220/</a></p></li>
+<li>I am a second year PhD Student in Accounting at University of Minnesota Carlson School of Management.</li>
+<li>I study how new accounting rules shape real decisions, with broader interests in financial institutions, risk management, and governance.</li>
 </ul>
 <section id="education" class="level2">
 <h2 class="anchored" data-anchor-id="education">Education</h2>
